--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap');
 
 * {
+  margin:0px;
+  padding:0px;
   box-sizing: border-box;
+  font-family:'Barlow Semi Condensed', sans-serif;
+}
+
+body {
+  background-image: radial-gradient(circle, hsl(214, 47%, 23%) 10%,  hsl(237, 49%, 15%) 90%);
+  height: 100vh;
+  background-position: top top;
 }
